fixed overflow in windows

--- a/src/main.css
+++ b/src/main.css
@@ -3,17 +3,16 @@
   flex-wrap: wrap;
   justify-content: center;
   align-content: space-between;
-  height: 63%;
-  width: 49%;
-  margin-left: 0.5%;
+  width: 50%;
 }
+
 .number-buttons button {
   height: 20.5%;
-  width: 31.5%;
+  width: 24.1%;
   background-color: grey;
   font-size: 99%;
   border-radius: 5px;
-  margin: 3% 0.92%;
+  margin: 1%;
   border: none;
   flex-grow: 1;
 }
@@ -47,11 +46,7 @@
   flex-direction: column;
   justify-content: center;
   align-content: space-around;
-  width: 49%;
-  height: 57%;
-  bottom: 60%;
-  left: 49%;
-  margin-left: 2%;
+  width: 50%;
 }
 .operations button {
   height: 20.5%;
@@ -68,6 +63,13 @@
   background-color: red;
 }
 
+.buttons-display{
+  display: flex;
+  width: 95%;
+  margin: 3% auto;
+  padding: 5px;
+}
+
 * {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: white;
@@ -82,15 +84,16 @@ body {
 }
 
 #root {
-  height: 500px;
-  width: 600px;
+  height: 400px;
+  width: 500px;
   padding: 5px;
   box-shadow: 0 0 20px grey;
   border-radius: 20px;
 }
 
 .App {
-  height: 100%;
+  height: 500px;
+  width: inherit;
 }
 .App h3 {
   text-align: center;
@@ -101,7 +104,8 @@ body {
   margin: 0 auto;
 }
 .App .calculator {
-  height: 100%;
+  height: 500px;
+  width: inherit;
 }
 
 /*# sourceMappingURL=main.css.map */
